--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "firebase": "^10.12.0",
+    "ra-data-json-server": "^4.16.17",
     "react": "^18.2.0",
+    "react-admin": "^4.16.18",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
