--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "firebase": "^10.12.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
