--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,9 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/nodemailer": "^6.4.15",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "firebase": "^10.12.1"
+    "firebase": "^10.12.1",
+    "nodemailer": "^6.9.13",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
