--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "ra-data-json-server": "^4.16.17",
     "react": "^18.2.0",
     "react-admin": "^4.16.18",
+    "react-admin-color-picker": "^1.0.3",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
