--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,8 @@
     "react-admin": "^4.16.18",
     "react-admin-color-picker": "^1.0.3",
     "react-dom": "^18.2.0",
-    "react-organizational-chart": "^2.2.1"
+    "react-organizational-chart": "^2.2.1",
+    "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
