--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@firebase/storage": "^0.12.5",
     "@types/nodemailer": "^6.4.15",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
@@ -18,12 +19,14 @@
     "express": "^4.19.2",
     "firebase": "^10.12.1",
     "nodemailer": "^6.9.13",
+    "pdfkit": "^0.15.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "@types/pdfkit": "^0.13.4",
     "eslint": "^9.3.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
