--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/x-date-pickers": "^7.6.2",
+    "dayjs": "^1.11.11",
     "firebase": "^10.12.0",
     "ra-data-json-server": "^4.16.17",
     "react": "^18.2.0",
